[tool.poetry]
name = "dask-extrae"
version = "0.1.0"
description = "Scheduler & Worker profilers for Dask using Extrae"
authors = ["Sergio Sánchez Ramírez"]

[tool.poetry.dependencies]
python = "^3.7"
dask = "^2021.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"